fix(ui-overlays,Popover): Pass down stacking/z-index to ContextView/View
Fixes INSTUI-1205

Test plan:
Verify that the Popover examples show above the docs navigation tray.

Reviewed-on: https://gerrit.instructure.com/149382
Tested-by: Jenkins
Product-Review: Stephen Jensen <sejensen@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-layout/src/components/View/styles.css
+++ b/packages/ui-layout/src/components/View/styles.css
@@ -74,3 +74,33 @@
 .size--fullscreen {
   max-width: 100vw;
 }
+
+.stacking--topmost {
+  z-index: var(--stackingTopmost);
+}
+
+.stacking--above {
+  z-index: var(--stackingAbove);
+}
+
+.stacking--resting {}
+
+.stacking--below {
+  z-index: var(--stackingBelow);
+}
+
+.stacking--deepest {
+  z-index: var(--stackingDeepest);
+}
+
+.shadow--topmost {
+  box-shadow: var(--shadowTopmost);
+}
+
+.shadow--resting {
+  box-shadow: var(--shadowResting);
+}
+
+.shadow--above {
+  box-shadow: var(--shadowAbove);
+}
